--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "mailgun.js": "^7.0.4",
     "next": "12.0.7",
+    "nodemailer": "^6.7.7",
+    "nodemailer-mailgun-transport": "^2.1.4",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.0",
