--- a/src/data/app.json
+++ b/src/data/app.json
@@ -1,5 +1,5 @@
 {
-    "lightLogo": "/img/logo-light.png",
+    "lightLogo": "/img/logo-light-new.png",
     "darkLogo": "/img/logo-dark.png",
     "showLoading": true
 }
