--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
