--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     // Other rules
-    "@next/next/no-html-link-for-pages": "off"
+    "@next/next/no-html-link-for-pages": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
