--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.10",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "mailgun.js": "^7.0.4",
@@ -19,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-modal-video": "^1.2.8",
     "react-slick": "^0.28.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^7.4.1",
