--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.10",
+    "@vercel/analytics": "^1.0.1",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "mailgun.js": "^7.0.4",
