--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "mailgun.js": "^7.0.4",
-    "micro-cors": "^0.1.1",
     "next": "12.0.7",
+    "nextjs-cors": "^2.1.2",
     "query-string": "^8.1.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
