--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@vercel/analytics": "^1.0.1",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
     "next": "12.0.7",
     "query-string": "^8.1.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-confetti": "^6.1.0",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-modal-video": "^1.2.8",
@@ -27,6 +29,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "split-text-js": "^1.0.3",
     "swiper": "^7.4.1",
     "ytdl-core": "^4.11.0"
   },
