--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.10",
     "@vercel/analytics": "^1.0.1",
+    "confetti-react": "^2.6.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "gsap": "^3.12.2",
@@ -21,7 +22,6 @@
     "query-string": "^8.1.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
-    "react-confetti": "^6.2.1",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-modal-video": "^1.2.8",
