update: New home page update.

--- a/src/data/showcases-mobile-app-data.json
+++ b/src/data/showcases-mobile-app-data.json
@@ -9,5 +9,16 @@
     "sub": "Software dev",
     "link": "/#",
     "paragraph": "a time in a world of ones and zeroes, ideas whispered, waiting to grow. With code as my canvas, I shape visions into reality—each line a step toward innovation. Whether an AI-driven tool, a seamless platform, or a bold new idea, I bring it to life with precision and creativity. Let’s build something extraordinary—your vision, my code. Ready to start?"
+  },
+  {
+    "id": 1,
+    "title": {
+      "first": "Viss",
+      "second": "Mingle"
+    },
+    "image": "/img/portfolio/projects/subber-app-mockup.png",
+    "sub": "Software dev",
+    "link": "/#",
+    "paragraph": "a time in a world of ones and zeroes, ideas whispered, waiting to grow. With code as my canvas, I shape visions into reality—each line a step toward innovation. Whether an AI-driven tool, a seamless platform, or a bold new idea, I bring it to life with precision and creativity. Let’s build something extraordinary—your vision, my code. Ready to start?"
   }
 ]
