--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.10",
+    "@sparticuz/chromium": "^138.0.2",
     "@vercel/analytics": "^1.0.1",
     "animate.css": "^4.1.1",
     "confetti-react": "^2.6.0",
@@ -23,6 +24,7 @@
     "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
     "next": "12.0.7",
+    "puppeteer-core": "^24.17.1",
     "query-string": "^8.1.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
