--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.10",
-    "@sparticuz/chromium": "^121.0.0",
     "@vercel/analytics": "^1.0.1",
     "animate.css": "^4.1.1",
+    "chrome-aws-lambda": "^10.1.0",
     "confetti-react": "^2.6.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
