--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.10",
+    "@sparticuz/chromium": "^121.0.0",
     "@vercel/analytics": "^1.0.1",
     "animate.css": "^4.1.1",
-    "chrome-aws-lambda": "^10.1.0",
     "confetti-react": "^2.6.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
     "next": "12.0.7",
-    "puppeteer-core": "19.11.1",
+    "puppeteer-core": "21.11.0",
     "query-string": "^8.1.0",
     "react": "17.0.2",
     "react-circular-progressbar": "^2.0.4",
