--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.10",
+    "@next/mdx": "^15.5.2",
     "@sparticuz/chromium": "^108.0.0",
     "@vercel/analytics": "^1.0.1",
     "animate.css": "^4.1.1",
@@ -23,13 +23,13 @@
     "formik": "^2.2.9",
     "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
-    "next": "12.0.7",
+    "next": "^15.5.2",
     "puppeteer-core": "13.7.0",
     "query-string": "^8.1.0",
-    "react": "17.0.2",
+    "react": "^19.1.1",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^6.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^19.1.1",
     "react-modal-video": "^1.2.8",
     "react-slick": "^0.28.1",
     "react-syntax-highlighter": "^15.5.0",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "^15.5.2"
   },
   "engineStrict": true
 }
