--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^15.5.2",
-    "@sparticuz/chromium": "^108.0.0",
+    "@sparticuz/chromium": "119.0.0",
     "@vercel/analytics": "^1.0.1",
     "animate.css": "^4.1.1",
     "confetti-react": "^2.6.0",
@@ -24,7 +24,7 @@
     "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
     "next": "^15.5.2",
-    "puppeteer-core": "13.7.0",
+    "puppeteer-core": "21.11.0",
     "query-string": "^8.1.0",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.0.4",
