--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "functions": {
       "pages/api/html-to-pdf.js": {
         "maxDuration": 30,
-        "memory": 1024
+        "memory": 1024,
+        "runtime": "nodejs18.x"
       }
     }
   }
