--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gsap": "^3.12.2",
     "mailgun.js": "^7.0.4",
     "next": "^15.5.2",
-    "puppeteer-core": "21.11.0",
+    "playwright-core": "1.40.0",
     "query-string": "^8.1.0",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.0.4",
