fix: NextJS v15 upgrade errors.

--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "query-string": "^8.1.0",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.0.4",
-    "react-countup": "^6.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-intersection-observer": "^9.16.0",
     "react-modal-video": "^1.2.8",
     "react-slick": "^0.28.1",
     "react-syntax-highlighter": "^15.5.0",
-    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "split-text-js": "^1.0.3",
-    "swiper": "^7.4.1",
+    "swiper": "^11.2.10",
     "ytdl-core": "^4.11.0"
   },
   "devDependencies": {
